[gd_scene load_steps=2 format=3 uid="uid://jpy61hi47b2"]

[ext_resource type="Script" path="res://hud.gd" id="1_qx7ow"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_qx7ow")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 160.0
offset_bottom = 160.0
color = Color(1, 1, 1, 0.313726)

[node name="ElecticFieldCheckBox" type="CheckBox" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 143.0
offset_bottom = 51.0
text = "Electric field"

[node name="ChargesCheckBox" type="CheckBox" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 143.0
offset_bottom = 91.0
text = "Charge"

[node name="MassCheckBox" type="CheckBox" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 143.0
offset_bottom = 131.0
text = "Mass"

[connection signal="toggled" from="ColorRect/ElecticFieldCheckBox" to="." method="_on_electic_field_check_box_toggled"]
[connection signal="toggled" from="ColorRect/ChargesCheckBox" to="." method="_on_charges_check_box_toggled"]
[connection signal="toggled" from="ColorRect/MassCheckBox" to="." method="_on_mass_check_box_toggled"]
